--- a/paginas/Terapias.html
+++ b/paginas/Terapias.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="import" href="fonts\MeriendaOne-Regular.ttf.html">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="import" href="fonts\MeriendaOne-Regular.ttf.html">
     <link rel="stylesheet" href="../style.css">
     <title>Coherencia Cuántica</title>
     <meta name="keywords" content="Terapias Alternativas, cursos, talleres, terapias, armonizacion, meditaciones, Sanacion, reprogramacion de creencias, crecimiento, radiestecia, radionica, viviren plenitud"/>
@@ -17,7 +16,7 @@
   <header class="container-fluid" style="background-color: #aa53a3a6;"> 
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"> <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica"></a>
+          <a class="navbar-brand" href="./index.html"> <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
