--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Paginas/Terapias.html">Terapias</a>
+                <a class="nav-link" href="./paginas/Terapias.html">Terapias</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./paginas/talleres-cursos.html">Talleres y Cursos</a>
