--- a/paginas/Terapias.html
+++ b/paginas/Terapias.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="import" href="fonts\MeriendaOne-Regular.ttf.html">
+    <link rel="import" href="fonts/MeriendaOne-Regular.ttf.html">
     <link rel="stylesheet" href="../style.css">
     <title>Coherencia Cuántica</title>
     <meta name="keywords" content="Terapias Alternativas, cursos, talleres, terapias, armonizacion, meditaciones, Sanacion, reprogramacion de creencias, crecimiento, radiestecia, radionica, viviren plenitud"/>
