--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./paginas/Terapias.html">Terapias</a>
+                <a class="nav-link" href="./paginas/terapias.html">Terapias</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./paginas/talleres-cursos.html">Talleres y Cursos</a>
@@ -137,16 +137,16 @@
               <a href="./index.html" class="text-reset">☯ Inicio</a>
             </p>
             <p>
-              <a href="./Paginas/Terapias.html" class="text-reset">☯ Terapias</a>
+              <a href="./Paginas/terapias.html" class="text-reset">☯ Terapias</a>
             </p>
             <p>
-              <a href="./Paginas/Talleres-Cursos.html" class="text-reset">☯ Talleres y Cursos</a>
+              <a href="./Paginas/talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
             </p>
             <p>
-              <a href="./Paginas/Tienda.html" class="text-reset">☯ tienda</a>
+              <a href="./Paginas/tienda.html" class="text-reset">☯ tienda</a>
             </p>
             <p>
-                <a href="./Paginas/Contacto.html" class="text-reset">☯ Contacto</a>
+                <a href="./Paginas/contacto.html" class="text-reset">☯ Contacto</a>
               </p>
             </section>
           </div>
