--- a/paginas/Tienda.html
+++ b/paginas/Tienda.html
@@ -118,16 +118,16 @@
           <a href="../index.html" class="text-reset">☯ Inicio</a>
         </p>
         <p>
-          <a href="./Terapias.html" class="text-reset">☯ Terapias</a>
+          <a href="./terapias.html" class="text-reset">☯ Terapias</a>
         </p>
         <p>
-          <a href="./Talleres-Cursos.html" class="text-reset">☯ Talleres y Cursos</a>
+          <a href="./talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
         </p>
         <p>
-          <a href="./Tienda.html" class="text-reset">☯ tienda</a>
+          <a href="./tienda.html" class="text-reset">☯ tienda</a>
         </p>
         <p>
-            <a href="./Contacto.html" class="text-reset">☯ Contacto</a>
+            <a href="./contacto.html" class="text-reset">☯ Contacto</a>
           </p>
         </section>
       </div>
