--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
               <a href="./Paginas/terapias.html" class="text-reset">☯ Terapias</a>
             </p>
             <p>
-              <a href="./Paginas/talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
+              <a href="./paginas/talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
             </p>
             <p>
-              <a href="./Paginas/tienda.html" class="text-reset">☯ tienda</a>
+              <a href="./paginas/tienda.html" class="text-reset">☯ tienda</a>
             </p>
             <p>
-                <a href="./Paginas/contacto.html" class="text-reset">☯ Contacto</a>
+                <a href="./paginas/contacto.html" class="text-reset">☯ Contacto</a>
               </p>
             </section>
           </div>
