--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,7 +17,7 @@
   <header class="container-fluid" style="background-color: #aa53a3a6;"> 
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"> <img src="../imagenes/" class="logo" alt="Logo Coherencia Cuántica"></a>
+          <a class="navbar-brand" href="../index.html"> <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
