--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <a href="./index.html" class="text-reset">☯ Inicio</a>
             </p>
             <p>
-              <a href="./Paginas/terapias.html" class="text-reset">☯ Terapias</a>
+              <a href="./paginas/terapias.html" class="text-reset">☯ Terapias</a>
             </p>
             <p>
               <a href="./paginas/talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
