--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -16,35 +16,37 @@
   <!--Header-->
   <header class="container-fluid" style="background-color: #aa53a3a6;"> 
     <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"> <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./terapias.html">Terapias</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./talleres-cursos.html">Talleres y Cursos</a>
-              </li>
-              <li class="nav-item">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./terapias.html">Terapias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./talleres-cursos.html">Talleres y Cursos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="./tienda.html">Tienda</a>
             </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-        <div class="card-body">
-            <p class="card-text fs-5 fw-bold text-center alter">Talleres de Terapias Alternativas</p>
-          </div>
-      </nav>
+      </div>
+      <div class="card-body">
+        <p class="card-text fs-5 fw-bold text-center alter">Talleres de Terapias Alternativas</p>
+      </div>
+    </nav>
   </header>
   <!--Header-->
   <!--Main-->
@@ -94,74 +96,73 @@
                     <button type="submit" class="btn btn" style="color: wheat; border: solid color ; border-radius: 1rem; background-color: rgba(72, 6, 69, 0.631);">Enviar</button>
                     <button type="submit" class="btn btn" style="color: wheat; border: solid color ; border-radius: 1rem; background-color: rgba(72, 6, 69, 0.631);">Borrar</button>
                   </div>
-                  </div>
+                </div>
               </fieldset>
             </form>
-            </div>
-            </div>
-          </div>
-          <div class="col-sm-2">
-            <div class="video">
-              <div class="card-body">
-                <iframe width="130" height="300" src="https://www.youtube.com/embed/tuWwheIXrdg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
-              </div>
-            </div>
           </div>
         </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="video">
+          <div class="card-body">
+            <iframe width="130" height="300" src="https://www.youtube.com/embed/tuWwheIXrdg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+          </div>
+        </div>
+      </div>
   </main>
   <!--Main-->
   <!--Footer-->  
- <footer>
-  <div class="container p-3">
-    <div class="row">
-      <div class="col-lg-6 col-md-6  mx-auto mb-4">
-        <h4 class="text-uppercase text-center">"Coherencia Cuántica"</h4>
-        <p class="text-uppercase text-center footerTexto">Talleres de Terapias Alternativas</p>
-        <p class="text-center footerTextoRedes">Seguime en mis redes</p>
-        <div class="footerRedes d-flex-block text-center">      
-          <a href="https://www.facebook.com/coherenciacuantica.adriana" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-            <img src="../imagenes/Redes/facebook.jpg" class="redes" alt="Logo Facebook">
-          </a> 
-          <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-            <img src="../imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
-          </a>
-          <a href="mailto:yamihesa@hotmail.com"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-            <img src="../imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
-          </a>
-          <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-            <img src="../imagenes/Redes/Instagram.png" class="redes" alt="Logo Instagram">
-          </a>
+  <footer>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-lg-6 col-md-6  mx-auto mb-4">
+          <h4 class="text-uppercase text-center">"Coherencia Cuántica"</h4>
+          <p class="text-uppercase text-center footerTexto">Talleres de Terapias Alternativas</p>
+          <p class="text-center footerTextoRedes">Seguime en mis redes</p>
+          <div class="footerRedes d-flex-block text-center">      
+            <a href="https://www.facebook.com/coherenciacuantica.adriana" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="../imagenes/Redes/facebook.jpg" class="redes" alt="Logo Facebook">
+            </a> 
+            <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="../imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
+            </a>
+            <a href="mailto:yamihesa@hotmail.com"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="../imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
+            </a>
+            <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="../imagenes/Redes/Instagram.png" class="redes" alt="Logo Instagram">
+            </a>
+          </div>
+        </div> 
+        <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+          <p class="text-uppercase text-center lh-lg mt-4 recuadro">"Aquellos que creen en la magia estan destinados a encontrarla" </p>        
         </div>
-      </div> 
-      <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-        <p class="text-uppercase text-center lh-lg mt-4 recuadro">"Aquellos que creen en la magia estan destinados a encontrarla" </p>        
-      </div>
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-        <section class="d-flex-block menuLinkFooter">
-        <p>
-          <a href="../index.html" class="text-reset">☯ Inicio</a>
-        </p>
-        <p>
-          <a href="./terapias.html" class="text-reset">☯ Terapias</a>
-        </p>
-        <p>
-          <a href="./talleres-Cursos.html" class="text-reset">☯ Talleres y Cursos</a>
-        </p>
-        <p>
-          <a href="./tienda.html" class="text-reset">☯ tienda</a>
-        </p>
-        <p>
-            <a href="./contacto.html" class="text-reset">☯ Contacto</a>
-          </p>
-        </section>
-      </div>
-      </div>
-      </div>
-      <section class="d-lg-between">
-        <div class="text-center" style="background-color: rgba(72, 6, 69, 0.631);">
-          <p class="copy">© 2022 Copyright - ☯ YamiHesa ☯</p>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <section class="d-flex-block menuLinkFooter">
+            <p>
+              <a href="../index.html" class="text-reset">☯ Inicio</a>
+            </p>
+            <p>
+              <a href="./terapias.html" class="text-reset">☯ Terapias</a>
+            </p>
+            <p>
+              <a href="./talleres-Cursos.html" class="text-reset">☯ Talleres y Cursos</a>
+            </p>
+            <p>
+              <a href="./tienda.html" class="text-reset">☯ tienda</a>
+            </p>
+            <p>
+              <a href="./contacto.html" class="text-reset">☯ Contacto</a>
+            </p>
+          </section>
         </div>
-      </section>
+      </div>
+    </div>
+    <section class="d-lg-between">
+      <div class="text-center" style="background-color: rgba(72, 6, 69, 0.631);">
+        <p class="copy">© 2022 Copyright - ☯ YamiHesa ☯</p>
+      </div>
+    </section>
   </footer>
   <!-- Footer -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
