--- a/index.html
+++ b/index.html
@@ -47,92 +47,88 @@
       </nav>
   </header>
   <!--header-->
-    <!--Main-->
-    <main class="container-fluid" style="background-image: url(./imagenes/v1014-pattern-001b.jpg); background-size: contain;">
-      <h5 class="text-center p-2">Bienvenido a Coherencia Cuántica</h5>
-      <section class="container-fluid w-50 h-50">
-        <div class="row">
-          <div class="col">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="./imagenes/Carrousel/feng-shui-1960783_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>
-                <div class="carousel-item">
-                  <img src="./imagenes/Carrousel/hands-3753417_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>
-                <div class="carousel-item">
-                  <img src="./imagenes/Carrousel/horse-3395135_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>
-                <div class="carousel-item">
-                  <img src="./imagenes/Carrousel/img3.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>
-                <div class="carousel-item">
-                  <img src="./imagenes/Carrousel/img4.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>                  
-                <div class="carousel-item">
-                  <img src="./imagenes/Carrousel/img6.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>
-                <div class="carousel-item">
-                  <img src="./imagenes/Carrousel/sky-3983433_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
-                </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+  <!--Main-->
+  <main class="container-fluid" style="background-image: url(./imagenes/v1014-pattern-001b.jpg); background-size: contain;">
+    <h5 class="text-center p-2">Bienvenido a Coherencia Cuántica</h5>
+    <section class="container-fluid w-50 h-50">
+      <div class="row">
+        <div class="col">
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./imagenes/Carrousel/feng-shui-1960783_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
               </div>
+              <div class="carousel-item">
+                <img src="./imagenes/Carrousel/hands-3753417_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
+              </div>
+              <div class="carousel-item">
+                <img src="./imagenes/Carrousel/horse-3395135_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
+              </div>
+              <div class="carousel-item">
+                <img src="./imagenes/Carrousel/img3.jpg" class="d-block w-100" alt="Imagen espiritualidad">
+              </div>
+              <div class="carousel-item">
+                <img src="./imagenes/Carrousel/img4.jpg" class="d-block w-100" alt="Imagen espiritualidad">
+              </div>                  
+              <div class="carousel-item">
+                <img src="./imagenes/Carrousel/img6.jpg" class="d-block w-100" alt="Imagen espiritualidad">
+              </div>
+              <div class="carousel-item">
+                <img src="./imagenes/Carrousel/sky-3983433_1280.jpg" class="d-block w-100" alt="Imagen espiritualidad">
               </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-        </section>
-        <section class="container-md">
-          <div class="row">
-            <div class="col">
-              <h3 class="text-center" style="text-decoration: underline;">Mi Historia</h3>
-              <p class="historia text-center">Siempre estuve convencida de que vinimos a la tierra para vivir en plenitud.
-              Me encontré persistiendo en cada desafío convencida de lo que sentía en mí corazón.
-
-              Me fui capacitando con diversas técnicas porque comprendo que cada Ser necesita diferentes herramientas para llevar su vida a otro nivel. 
-              Y mí intención es acompañarlos en ese proceso de superación personal, eliminando las resistencias que nos Impiden vivir en totalidad.</p>
+        </div>
+      </div>
+    </section>
+    <section class="container-md">
+      <div class="row">
+        <div class="col">
+          <h3 class="text-center" style="text-decoration: underline;">Mi Historia</h3>
+          <p class="historia text-center">Siempre estuve convencida de que vinimos a la tierra para vivir en plenitud.
+          Me encontré persistiendo en cada desafío convencida de lo que sentía en mí corazón.
+          Me fui capacitando con diversas técnicas porque comprendo que cada Ser necesita diferentes herramientas para llevar su vida a otro nivel. Y mí intención es acompañarlos en ese proceso de superación personal, eliminando las resistencias que nos Impiden vivir en totalidad.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!--main-->
+  <!--footer-->
+  <footer>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-lg-6 col-md-6  mx-auto mb-4">
+          <h4 class="text-uppercase text-center">"Coherencia Cuántica"</h4>
+          <p class="text-uppercase text-center footerTexto">Talleres de Terapias Alternativas</p>
+          <p class="text-center footerTextoRedes">Seguime en mis redes</p>
+          <div class="footerRedes d-flex-block text-center">
+            <a href="https://www.facebook.com/coherenciacuantica.adriana" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="./imagenes/Redes/facebook.jpg" class="redes" alt="Logo Facebook">
+            </a>
+            <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="./imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
+            </a>
+            <a href="mailto:yamihesa@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="./imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
+            </a>
+            <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+              <img src="./imagenes/Redes/Instagram.png" class="redes" alt="Logo Instagram">
+            </a>
           </div>
-          </div>
-          </section>
-    </main>
-    <!--main-->
-    <!--footer-->
-    <footer>
-      <div class="container p-3">
-        <div class="row">
-          <div class="col-lg-6 col-md-6  mx-auto mb-4">
-            <h4 class="text-uppercase text-center">"Coherencia Cuántica"</h4>
-            <p class="text-uppercase text-center footerTexto">Talleres de Terapias Alternativas</p>
-            <p class="text-center footerTextoRedes">Seguime en mis redes</p>
-            <div class="footerRedes d-flex-block text-center">      
-              <a href="https://www.facebook.com/coherenciacuantica.adriana" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-                <img src="./imagenes/Redes/facebook.jpg" class="redes" alt="Logo Facebook">
-              </a> 
-              </a>
-              <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-                <img src="./imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
-              </a>
-              <a href="mailto:yamihesa@hotmail.com"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-                <img src="./imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
-              </a>
-              <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
-                <img src="./imagenes/Redes/Instagram.png" class="redes" alt="Logo Instagram">
-              </a>
-            </div>
-          </div> 
-          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-            <p class="text-uppercase text-center lh-lg mt-4 recuadro">"Aquellos que creen en la magia estan destinados a encontrarla" </p>        
-          </div>
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <section class="d-flex-block menuLinkFooter">
+        </div> 
+        <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+          <p class="text-uppercase text-center lh-lg mt-4 recuadro">"Aquellos que creen en la magia estan destinados a encontrarla" </p>        
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <section class="d-flex-block menuLinkFooter">
             <p>
               <a href="./index.html" class="text-reset">☯ Inicio</a>
             </p>
@@ -146,20 +142,20 @@
               <a href="./paginas/tienda.html" class="text-reset">☯ tienda</a>
             </p>
             <p>
-                <a href="./paginas/contacto.html" class="text-reset">☯ Contacto</a>
-              </p>
-            </section>
-          </div>
-          </div>
-          </div>
-          <section class="d-lg-between">
-            <div class="text-center" style="background-color: rgba(72, 6, 69, 0.631);">
-              <p class="copy">© 2022 Copyright - ☯ YamiHesa ☯</p>
-            </div>
+              <a href="./paginas/contacto.html" class="text-reset">☯ Contacto</a>
+            </p>
           </section>
-    </footer>
-    <!-- Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+        </div>
+      </div>
+    </div>
+    <section class="d-lg-between">
+      <div class="text-center" style="background-color: rgba(72, 6, 69, 0.631);">
+        <p class="copy">© 2022 Copyright - ☯ YamiHesa ☯</p>
+      </div>
+    </section>
+  </footer>
+  <!-- Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
