--- a/paginas/terapias.html
+++ b/paginas/terapias.html
@@ -15,35 +15,36 @@
   <!--Header-->
   <header class="container-fluid" style="background-color: #aa53a3a6;"> 
     <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"> <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./terapias.html">Terapias</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./talleres-cursos.html">Talleres y Cursos</a>
-              </li>
-              <li class="nav-item">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"> <img src="../imagenes/logo.png" class="logo" alt="Logo Coherencia Cuántica">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./terapias.html">Terapias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./talleres-cursos.html">Talleres y Cursos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="./tienda.html">Tienda</a>
             </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-        <div class="card-body">
-          <p class="card-text fs-5 fw-bold text-center alter">Talleres de Terapias Alternativas</p>
-        </div>
-      </nav>
+      </div>
+      <div class="card-body">
+        <p class="card-text fs-5 fw-bold text-center alter">Talleres de Terapias Alternativas</p>
+      </div>
+    </nav>
   </header>
   <!--Header-->
   <!--Main-->
@@ -125,20 +126,20 @@
               <a href="./tienda.html" class="text-reset">☯ tienda</a>
             </p>
             <p>
-                <a href="./contacto.html" class="text-reset">☯ Contacto</a>
-              </p>
+              <a href="./contacto.html" class="text-reset">☯ Contacto</a>
+            </p>
           </section>
         </div>
       </div>
     </div>
     <section class="d-lg-between">
-    <div class="text-center" style="background-color: rgba(72, 6, 69, 0.631);">
-      <p class="copy">© 2022 Copyright - ☯ YamiHesa ☯</p>
-    </div>
+      <div class="text-center" style="background-color: rgba(72, 6, 69, 0.631);">
+        <p class="copy">© 2022 Copyright - ☯ YamiHesa ☯</p>
+      </div>
     </section>
   </footer>
   <!-- Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
