--- a/404.html
+++ b/404.html
@@ -9,12 +9,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Coherencia Cuántica 404 Error Page</title>
-  <link rel="stylesheet" media="all" href="style.css" />
+  <link rel="stylesheet" media="all" href="style.css">
 </head>
 <body>
     <section>
         <a href="./index.html">
-            <img src="../imagenes/logo.png" class="logo" alt="Logo Inicio">
+            <img src="../imagenes/logo.png" class="logo" alt="Logo Inicio" style="margin: 1rem;">
         </a>
     </section>
   <section id="not-found">
