--- a/paginas/talleres-cursos.html
+++ b/paginas/talleres-cursos.html
@@ -90,7 +90,7 @@
             <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
             </a>
-            <a href="mailto:yamihesa@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+            <a href="mailto:adriana_abella@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
             </a>
             <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
