--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Coherencia Cuántica</title>
     <meta name="keywords" content="Terapias Alternativas, cursos, talleres, terapias, armonizacion, meditaciones, Sanacion, reprogramacion de creencias, crecimiento, radiestecia, radionica, viviren plenitud"/>
-    <meta name="description" content="Somos una institución de formación personal para un crecimiento interior del Ser. Basados en cursos y talleres para mejorar nuestros mandatos adquiridos en la niñez y en la vida. Sanar el alma. Contáctanos"/>
+    <meta name="description" content="Somos una institución de formación personal para un crecimiento interior del Ser. Basados en cursos y talleres para mejorar nuestros mandatos adquiridos en la niñez y en la vida. Sanar el alma. Contáctanos">
 </head>
 <body>
   <!--header-->
@@ -116,7 +116,7 @@
             <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="./imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
             </a>
-            <a href="mailto:yamihesa@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+            <a href="mailto:adriana_abella@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="./imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
             </a>
             <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
@@ -139,7 +139,7 @@
               <a href="./paginas/talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
             </p>
             <p>
-              <a href="./paginas/tienda.html" class="text-reset">☯ tienda</a>
+              <a href="./paginas/tienda.html" class="text-reset">☯ Tienda</a>
             </p>
             <p>
               <a href="./paginas/contacto.html" class="text-reset">☯ Contacto</a>
