--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -58,7 +58,7 @@
             <form class="form-horizontal p-5" method="post">
               <fieldset>
                 <div>
-                  <p class="fs-1 text-left" style="color: rgb(161, 75, 147); text-decoration: underline;">Contactate Conmigo</p>
+                  <p class="fs-1 text-left tituloContacto" style="color: rgb(161, 75, 147); text-decoration: underline;">Contactate Conmigo</p>
                 </div>
                 <legend class="text-left header fs-2"></legend>
                 <div class="form-group">
@@ -126,10 +126,10 @@
             <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
             </a>
-            <a href="mailto:yamihesa@hotmail.com"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+            <a href="mailto:adriana_abella@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
             </a>
-            <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+            <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/Instagram.png" class="redes" alt="Logo Instagram">
             </a>
           </div>
@@ -149,7 +149,7 @@
               <a href="./talleres-Cursos.html" class="text-reset">☯ Talleres y Cursos</a>
             </p>
             <p>
-              <a href="./tienda.html" class="text-reset">☯ tienda</a>
+              <a href="./tienda.html" class="text-reset">☯ Tienda</a>
             </p>
             <p>
               <a href="./contacto.html" class="text-reset">☯ Contacto</a>
