--- a/paginas/tienda.html
+++ b/paginas/tienda.html
@@ -101,10 +101,10 @@
             <a href="https://web.whatsapp.com/" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/Whatsapp.jpg" class="redes" alt="Logo Whatsapp">
             </a>
-            <a href="mailto:yamihesa@hotmail.com"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+            <a href="mailto:adriana_abella@hotmail.com" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/mail.jfif" class="redes" alt="Logo mail">
             </a>
-            <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es"target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
+            <a href="https://www.instagram.com/talleresdeterapiasalternativas/?hl=es" target="_blank" class="btn" tabindex="-1" role="button" aria-disabled="true">
               <img src="../imagenes/Redes/Instagram.png" class="redes" alt="Logo Instagram">
             </a>
           </div>
@@ -124,7 +124,7 @@
               <a href="./talleres-cursos.html" class="text-reset">☯ Talleres y Cursos</a>
             </p>
             <p>
-              <a href="./tienda.html" class="text-reset">☯ tienda</a>
+              <a href="./tienda.html" class="text-reset">☯ Tienda</a>
             </p>
             <p>
               <a href="./contacto.html" class="text-reset">☯ Contacto</a>
